# embedded-nn-contracts

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-DATA  Makefile  PRIVATE_PUSH_COMMANDS.md  README.md  RELEASE_READINESS_REPORT.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/frozen_tables/: all_board_model_results.csv  experiment_success_retained_ledger.csv  mlperf_public_results_matrix.csv  raspberry_pi_supplement_results.csv  summary_counts.json
data/manifests/: release_manifest.json
docs/: DATA_SCHEMA.md  ENERGY_SCOPE.md  HARDWARE.md  OPERATOR_SCRIPTS.md  OVERVIEW.md  PRIVATE_GITHUB_SETUP.md  PUBLIC_COMPARISON_SCOPE.md  REDACTION_REPORT.md  RELEASE_PROCESS.md  REPRODUCIBILITY.md  STATUS_VOCABULARY.md  U575_RUNTIME_BUNDLE_NOTE.md
examples/: check_u575_dropin.sh  reproduce_figures.sh  reproduce_final_tables.sh
operator_scripts/: 00_check_server_environment.sh  02_show_current_status.sh  30_check_u575_runtime_dropin.sh  31_resume_u575_when_runtime_available.sh  50_print_final_results_table.sh  README.md
operator_scripts/energy/: README_ENERGY_TEST_EN.md  run_f746_ad_energy_workload.sh  run_f746_ic_energy_workload.sh  run_f746_kws_energy_workload.sh  run_f746_vww_energy_workload.sh  (+1 more)
scripts/: package_release.py  regenerate_figures.py  regenerate_tables.py  validate_numbers.py  validate_public_release.py  validate_status_vocab.py
tests/: test_canonical_values.py  test_metrics.py  test_paths_are_relative.py  test_pi_vulkan_consistency.py  test_public_release_no_secrets.py  test_status_vocab.py
(+12 files in other folders)
