[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-nn-contracts"
version = "0.1.0"
description = "Validators and reproducibility utilities for embedded neural-network deployment experiments."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
